# cookiecutter-hypermodern-python-ml

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  cookiecutter.json  gh_utils.py  noxfile.py  pyproject.toml
.github/: dependabot.yml  release-drafter.yml
.github/workflows/: constraints.txt  docs.yml  labeler.yml  pre-commit.yml  tests.yml  update-instance.yml
docs/: conf.py  index.md  requirements.txt
tools/: prepare-github-release.py  publish-github-release.py
{{ cookiecutter.repo_name }}/: .pre-commit-config.yaml  README.md  noxfile.py  pyproject.toml  {% if cookiecutter.license != 'Not open source' -%}LICENSE{%- endif %}  {% if cookiecutter.open_source_license != 'Not open source' -%}LICENSE{%- endif %}
{{ cookiecutter.repo_name }}/.github/workflows/: tests.yml
{{ cookiecutter.repo_name }}/docs/: conf.py  index.md  reference.md
{{ cookiecutter.repo_name }}/tests/: __init__.py  test_transformer.py
{{ cookiecutter.repo_name }}/{{ cookiecutter.package_name }}/pipeline/: transformer.py
{{cookiecutter.repo_name}}/: README.md  noxfile.py  pyproject.toml  {% if cookiecutter.open_source_license != 'Not open source' -%}LICENSE{%- endif %}
{{cookiecutter.repo_name}}/.github/workflows/: tests.yml
{{cookiecutter.repo_name}}/docs/: conf.py  index.md
{{cookiecutter.repo_name}}/tests/: test_transformer.py
{{cookiecutter.repo_name}}/{{cookiecutter.package_name}}/pipeline/: transformer.py
