[tool.poetry]
name = "{{ cookiecutter.repo_name }}"
version = "{{ cookiecutter.version }}"
homepage = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.repo_name }}"
description = "{{ cookiecutter.project_description }}"
authors = ["{{cookiecutter.author_name}} <{{ cookiecutter.author_email }}>"]
readme = "README.md"
license = "{{ cookiecutter.open_source_license }}"

[tool.poetry.urls]
{% if cookiecutter.use_github_org == 'y' -%}
Changelog = "https://github.com/{{cookiecutter.github_org}}/{{cookiecutter.project_name}}/releases"
{% else %}
Changelog = "https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.project_name}}/releases"
{% endif -%}

[tool.poetry.dependencies]
python = ">=3.9,<4"

[tool.poetry.group.dev.dependencies]
isort = "*"
pytest = "^7.2.0"
sphinx = "^5.3.0"
black = "^22.10.0"
coverage = {extras = ["toml"], version = ">=6.5.0"}
flake8 = "^5.0.4"
mypy = "^0.982"
pre-commit = "^2.20.0"
pre-commit-hooks = "^4.3.0"
pyupgrade = "^3.2.0"
safety = "^2.3.1"
sphinx = "^5.3.0"
furo = "^2022.9.29"
sphinx-autobuild = "^2021.3.14"
typeguard = "^2.13.3"
myst-parser = "^0.18.1"
xdoctest = {extras = ["colors"], version = "^1.1.0"}
pep8-naming = "^0.13.2"
flake8-bugbear = "^22.10.27"
flake8-docstrings = "^1.6.0"
flake8-rst-docstrings = "^0.2.7"
nox-poetry = "^1.0.1"

[tool.coverage.paths]
source = ["{{cookiecutter.package_name}}", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["{{cookiecutter.package_name}}", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
